2008-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (HAVE_OPENMP): Add logic to make sure that
	OpenMP is only engaged for OpenMP 2.0 or later.
	* magick/command.c (VersionCommand): Report OpenMP version.
	* Makefile.am: The Magick++ build was supposed to be optional. Now
	it is.
	* Makefile.am: Eliminated .tar.bz2 and .zip packages from the
	distribution.  The .tar.bz2 package was hardly smaller than the
	.tar.gz package so it wasted 5.9MB with little benefit.  The
	compression ratio on the .zip archives is absolutely terrible so
	eliminating zip eliminates huge 9.6MB and 25MB files from the
	distribution equation.  Windows users can easily learn how to use
	the vastly more efficient 7-Zip format.

2008-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Rationalize OpenMP tests to make sure that OpenMP
	can not be enabled without thread support.

2008-10-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImageRegion): Add some minimal
	region limit checking.  Not completed yet.
	* magick/transform.c (RollImage): Accellerate using OpenMP.

2008-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (omp_get_thread_num): Remove spurious trailing
	';'.
	* magick/render.c (DrawPrimitive): Make method private since
	nothing else is using it.
	* magick/omp_thread_view.h (AccessThreadView): Inline function for
	a bit more performance.
	(AcquireOneThreadViewPixel) Inline function for a bit more
	performance.

2008-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* pragma omp parallel for: Use consistent static scheduling
	throughout and ensure that 64 threads can be usefully engaged on a
	1024 row image.
	* magick/pixel_iterator.c (SetRegionThreads): Implement logic so
	that pixel iterators execute single-threaded when invoked on tiny
	regions.
	* magick/pixel_cache.c (SetNexus): Make staging buffer memset()