@@ -1,3 +1,8 @@
+2008-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/studio.h: Make sure we don't conflict with OpenMP
+	implementation if it is active but we are not using it.
+
 2008-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/studio.h (HAVE_OPENMP): Add logic to make sure that
